# OpenCL-Goldbach

./: .gitignore  CMakeLists.txt  LICENSE  OpenCLSieve.cpp  OpenCLSieve.h  README.md
